Update extension popdown description

--- a/src/extension.html
+++ b/src/extension.html
@@ -32,7 +32,10 @@
         <a href="http://docs.microsoft.com" target="_blank">docs.microsoft.com</a> in the private
         repo by clicking on either the:
         <ul>
-          <li><span id="edit-button"><img src="icons/edit.png" /> Edit</span> button in an article</li>
+          <li>
+            <span id="edit-button"><img src="icons/edit.png" /> Edit</span> button in an article or
+            Learn module
+          </li>
           <li><em>Content Source</em> link in a GitHub issue</li>
         </ul>
       </div>
