--- a/src/extension.html
+++ b/src/extension.html
@@ -29,7 +29,7 @@
     <div class="container">
       <div>
         Edit articles on
-        <a href="http://docs.microsoft.com" target="_blank">docs.microsoft.com</a> in the private
+        <a href="http://learn.microsoft.com" target="_blank">learn.microsoft.com</a> in the private
         repo by clicking on either the:
         <ul>
           <li>
