feat: version number in popup

--- a/src/extension.html
+++ b/src/extension.html
@@ -27,16 +27,11 @@
 
   <body>
     <div class="container">
+      <div style="margin: 0 12px 12px 0;font-style:italic;">SpineEdit v3.0.4</div>
       <div>
         Edit articles on
         <a href="http://learn.microsoft.com" target="_blank">learn.microsoft.com</a> in the private
-        repo by clicking on either the:
-        <ul>
-          <li>
-            <span id="edit-button"><img src="icons/edit.png" /> Edit</span> button in an article or
-            Learn module
-          </li>
-        </ul>
+        repo by clicking on the <span id="edit-button"><img src="icons/edit.png" /> Edit</span> button in an article.
       </div>
     </div>
   </body>
